Fix overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -485,6 +485,11 @@ a:hover .icon-nav-message-btr { background-position: -28px 0; }
 	background: #D9D9D9;
 }
 
+.btr-explorer-header .input-group-btn .input-dropdown-btn .rbx-selection-label {
+	max-width: calc(100% - 24px);
+	white-space: pre-line;
+}
+
 .dark-theme .btr-explorer-header .input-group-btn .input-dropdown-btn {
 	background-color: #393b3d !important;
 }
